--- a/eletron-frontend/src/app/components/header/header.component.html
+++ b/eletron-frontend/src/app/components/header/header.component.html
@@ -1,13 +1,14 @@
-<header #header class="shadow-lg shadow-zinc-100">
-    <div class="container mx-auto py-4 px-5 md:px-6">
-        <div class="flex items-center justify-start gap-3">
-            <img width="35px" class="img-fluid" src="assets/img/logo-black-eletron.png" alt="eletron-logo">
-            <div class="flex flex-col md:gap-1 text-left">
-                <span class="text-lg font-semibold">ELETRÔNICA DO LUIS</span>
-                <div class="flex gap-3 text-slate-500" style="font-size: 13px">
-                    <span class="separator">(27) 99969-2465</span>
-                    <span>Nova Venécia-ES</span>
-                </div>
+<header #header class="fixed top-0 left-0 w-full z-50 border-bottom-1 surface-border bg-white">
+    <div class="container mx-auto py-3 px-4 md:px-6">
+        <div class="flex items-center justify-between gap-2">
+            <a class="flex items-center gap-3 no-underline text-black" href="/">
+                <img width="18px" class="img-fluid" src="assets/img/logo-black-eletron.png" alt="eletron-logo">
+                <span class="text-sm md:text-base font-semibold">ELETRÔNICA DO LUIS</span>
+            </a>
+            <div>
+                <a routerLink="/status">
+                    <p-button icon="pi pi-search" size="small" [rounded]="true" label="Consultar serviço"></p-button>
+                </a>
             </div>
         </div>
     </div>
