--- a/eletron-frontend/src/app/components/footer/footer.component.html
+++ b/eletron-frontend/src/app/components/footer/footer.component.html
@@ -1,38 +1,9 @@
-<div class="bg-black">
-    <div #horario class="bg-black main-background" style="background-image: url('assets/img/bg-lines-white.png')">
-        <div class="container mx-auto px-6 py-8 relative overflow-hidden">
-            <div class="relative z-50">
-                <h1 class="text-5xl md:text-6xl lg:text-7xl font-extrabold text-neutral-100 mt-0 mb-3">Horário de funcionamento</h1>
-                <div class="flex flex-col gap-1 text-lg text-neutral-300 horario-descricao">
-                    <div>
-                        <strong>Segunda</strong> à 
-                        <strong>Sexta</strong> das 
-                        <span>07h</span> até as 
-                        <span>17h</span>
-                    </div>
-                    <div>
-                        <strong>Sábado</strong> das 
-                        <span>07h</span> até as 
-                        <span>12h</span>
-                    </div>
-                </div>
-            </div>
-        
-            <div class="absolute right-12 z-0 top-0 opacity-50">
-                <img class="w-48 md:w-80" src="assets/img/logo-gray-eletron.png" alt="">
-            </div>
-        </div>
-    </div>
-
-    <div class="container mx-auto py-8 px-6">
-        <div class="mt-7 flex items-center gap-3 justify-start text-neutral-500">
-            <div class="flex flex-col gap-4 text-neutral-500 my-8">
-                <span>Brasil</span>
-                <span>R. Espírito Santo, 121 - Beira Rio, Nova Venécia - ES</span>
-                <span>(27) 99969-2465</span>
-                <span>Eletrônica do Luis</span>
-                <span>2024</span>
-            </div>
-        </div>
-    </div>
-</div>
+<footer class="flex md:flex-row flex-col-reverse justify-center items-center gap-4 font-light mx-auto mt-32 mb-6 text-sm">
+    <img width="15px" class="img-fluid opacity-30" src="assets/img/logo-black-eletron.png" alt="eletron-logo">
+    <a href="/">&copy; 2024 Eletrônica do Luis</a>
+    <a href="/">Contato</a>
+    <a href="/">Localização</a>
+    <a href="/">Horário de funcionamento</a>
+    <a href="/">Reformados</a>
+    <a href="/">Consultar serviço</a>
+</footer>
