--- a/eletron-frontend/src/app/components/reformado-list/reformado-list.component.html
+++ b/eletron-frontend/src/app/components/reformado-list/reformado-list.component.html
@@ -1,10 +1,8 @@
-<div id="reformados" class="mt-10 px-4 py-10">
-    <div class="card">
-        <h2 class="text-lg md:text-xl text-center md:text-left mb-5">
-            <i class="pi pi-shopping-cart text-xl mr-2"></i>
-            Confira os eletrônicos reformados disponíveis para venda:
-        </h2>
-        
+<div id="reformados">
+    <div>
+        <p class="text-center font-semibold text-xl mb-6">
+            Confira os eletrônicos reformados disponíveis para venda!
+        </p>
         @if(reformados.length > 0){
             <p-carousel 
             [value]="reformados" 
@@ -41,7 +39,7 @@
                 </ng-template>
             </p-carousel>
         } @else {
-            <p>Não há reformados no momento.</p>
+            <p class="text-center text-slate-500">Não há reformados no momento.</p>
         }
     </div>
 </div>
