--- a/eletron-frontend/src/app/app.component.html
+++ b/eletron-frontend/src/app/app.component.html
@@ -1,16 +1,8 @@
-<p-toast></p-toast>
-
 @if (loading) { 
     <div class="progress-container">
-        <p-progressBar 
-            mode="indeterminate" 
-            [style]="{'height': '4px', 'border-radius': '0px'}" 
-        /> 
+        <p-progressBar mode="indeterminate" [style]="{'height': '4px', 'border-radius': '0px'}" /> 
     </div>
 }
 
-<div>
-    <app-nav></app-nav>
-    <router-outlet></router-outlet>
-    <app-footer></app-footer>
-</div>
+<p-toast></p-toast>
+<router-outlet></router-outlet>
