--- a/eletron-frontend/src/app/components/header/header.component.html
+++ b/eletron-frontend/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 <header #header class="fixed top-0 left-0 w-full z-50 border-bottom-1 surface-border bg-white">
-    <div class="container mx-auto py-3 px-4 md:px-6">
+    <div class="container mx-auto py-2 px-4 md:px-6">
         <div class="flex items-center justify-between gap-2">
             <a class="flex items-center gap-3 no-underline text-black" href="/">
-                <img width="18px" class="img-fluid" src="assets/img/logo-black-eletron.png" alt="eletron-logo">
-                <span class="text-sm md:text-base font-semibold">ELETRÔNICA DO LUIS</span>
+                <img width="15px" class="img-fluid" src="assets/img/logo-black-eletron.png" alt="eletron-logo">
+                <span class="text-sm font-medium">ELETRÔNICA DO LUIS</span>
             </a>
             <div>
                 <a routerLink="/status">
