--- a/eletron-frontend/src/app/components/reformado-list/reformado-list.component.html
+++ b/eletron-frontend/src/app/components/reformado-list/reformado-list.component.html
@@ -39,7 +39,7 @@
                 </ng-template>
             </p-carousel>
         } @else {
-            <p class="text-center text-slate-500">Não há reformados no momento.</p>
+            <p class="text-center text-stone-500">Não há reformados no momento.</p>
         }
     </div>
 </div>
