--- a/eletron-frontend/src/styles.css
+++ b/eletron-frontend/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
 @import "primeng/resources/themes/aura-light-noir/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
@@ -44,21 +44,23 @@ html {
 
 body { 
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 @font-face {
-    font-family: 'Inter', sans-serif !important; 
+    font-family: 'Lexend', sans-serif !important;
     font-named-instance: "Regular" !important;
-    src: url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap') !important;
+    src: url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap') !important;
 }
 
 :root {
-    font-family: 'Inter', sans-serif !important; 
-    --font-family: "Inter", sans-serif !important;
+    font-family: 'Lexend', sans-serif !important; 
+    --font-family: "Lexend", sans-serif !important;
 }
 
 body, .p-toast { 
-    font-family: 'Inter', sans-serif !important;
+    font-family: 'Lexend', sans-serif !important;
 }
 
 .img-fluid {
